--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -11,10 +11,13 @@
 }
 a{
     text-decoration: none;
+    color:var(--text-color);
 }
 .messages{
     padding: 10px;
+    
 }
 .messages .message{
     padding: 10px;
+    color:var(--text-color);
 }
