--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,9 +1,11 @@
+
 .aside{
     grid-area: aside;
-    background-color: coral;
+    background-color: var(--bg-color);
+    border-right: 1px solid black;
 }
 .item a{
-    color:white;
+    color:var(--text-color);
 }
 a.activeLink{
     color:gold;
@@ -12,6 +14,7 @@ a.activeLink{
 .inlinefriends{
     display:inline-block;
     padding: 2px;
+    color:var(--text-color);
 }
 .item img {
     width: 40px;
